alt yapı kurulumlrarı yapıldı
razor html mail yapısı kuruldu  session için actionfilter yazıldı js ile response modeli yazıldı alt yapı kurulumlrarı yapıldı

--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -9,7 +9,26 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="AppUrl" value="http://localhost:56205/" />
+    <add key="FileUrl" value="http://localhost:56205/" />
+    <add key="MailTemplateRootPath" value="~/Utility/Extension/Mail/View/" />
+    <add key="MailTemplateFileExt" value="cshtml" />
+    <add key="MailHost" value="smtp@gmail.com" />
+    <add key="MailPort" value="587" />
+    <add key="MailEnableSSL" value="false" />
+    <add key="MailUseDefaultCredentials" value="false" />
+    <add key="MailDomain" value="" />
+    <add key="MailUsername" value="doyounowthese@gmail.com" />
+    <add key="MailPassword" value="ibanez756q7" />
+    <add key="MailSendFrom" value="doyounowthese@gmail.com" />
+    <add key="SystemDefaultLanguageCultureCode" value="tr-TR" />
+    <add key="ActivationExpiredAddDay" value="30" />
+    <add key="ErrorPostMail" value="test@gunce.com" />
+    <add key="ApprovalProcessSettingVisible" value="true"/>
   </appSettings>
+ 
+  
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
