--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -43,5 +43,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repository\AppUserManagement\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
