--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -904,6 +904,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppUserManagement\AppUserCRUDModel.cs" />
+    <Compile Include="Models\AppUserManagement\LoggedUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Attribute\LoggedUserAttribute.cs" />
     <Compile Include="Utility\Extension\MailBase.cs" />
@@ -939,6 +941,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -949,7 +952,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\AppUserManagement\" />
-    <Folder Include="Models\" />
     <Folder Include="Uploads\" />
     <Folder Include="Utility\Extension\Mail\Model\" />
     <Folder Include="Utility\Extension\Mail\View\" />
