--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -11,14 +11,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="AppUrl" value="http://localhost:56205/" />
     <add key="FileUrl" value="http://localhost:56205/" />
-    <add key="MailTemplateRootPath" value="~/Utility/Extension/Mail/View/" />
+    <add key="MailTemplateRootPath" value="~/Views/Mail/Template/" />
     <add key="MailTemplateFileExt" value="cshtml" />
-    <add key="MailHost" value="smtp@gmail.com" />
+    <add key="MailHost" value="smtp.gmail.com" />
     <add key="MailPort" value="587" />
-    <add key="MailEnableSSL" value="false" />
-    <add key="MailUseDefaultCredentials" value="false" />
+    <add key="MailEnableSSL" value="true" />
+    <add key="MailUseDefaultCredentials" value="true" />
     <add key="MailDomain" value="" />
-    <add key="MailUsername" value="doyounowthese@gmail.com" />
+    <add key="MailUsername" value="doyounowthese" />
     <add key="MailPassword" value="ibanez756q7" />
     <add key="MailSendFrom" value="doyounowthese@gmail.com" />
     <add key="SystemDefaultLanguageCultureCode" value="tr-TR" />
