Tablolaların modeli oluşturuldu ve Repository yapısı kuruldu

--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -4,26 +4,32 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          requirePermission="false"/>
+    </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="AppUrl" value="http://localhost:56205/" />
-    <add key="FileUrl" value="http://localhost:56205/" />
-    <add key="MailTemplateRootPath" value="~/Views/Mail/Template/" />
-    <add key="MailTemplateFileExt" value="cshtml" />
-    <add key="MailHost" value="smtp.gmail.com" />
-    <add key="MailPort" value="587" />
-    <add key="MailEnableSSL" value="true" />
-    <add key="MailUseDefaultCredentials" value="true" />
-    <add key="MailDomain" value="" />
-    <add key="MailUsername" value="doyounowthese" />
-    <add key="MailPassword" value="ibanez756q7" />
-    <add key="MailSendFrom" value="doyounowthese@gmail.com" />
-    <add key="SystemDefaultLanguageCultureCode" value="tr-TR" />
-    <add key="ActivationExpiredAddDay" value="30" />
-    <add key="ErrorPostMail" value="test@gunce.com" />
+    <add key="AppUrl" value="http://localhost:56205/"/>
+    <add key="FileUrl" value="http://localhost:56205/"/>
+    <add key="MailTemplateRootPath" value="~/Views/Mail/Template/"/>
+    <add key="MailTemplateFileExt" value="cshtml"/>
+    <add key="MailHost" value="smtp.gmail.com"/>
+    <add key="MailPort" value="587"/>
+    <add key="MailEnableSSL" value="true"/>
+    <add key="MailUseDefaultCredentials" value="true"/>
+    <add key="MailDomain" value=""/>
+    <add key="MailUsername" value="doyounowthese"/>
+    <add key="MailPassword" value="ibanez756q7"/>
+    <add key="MailSendFrom" value="doyounowthese@gmail.com"/>
+    <add key="SystemDefaultLanguageCultureCode" value="tr-TR"/>
+    <add key="ActivationExpiredAddDay" value="30"/>
+    <add key="ErrorPostMail" value="test@gunce.com"/>
     <add key="ApprovalProcessSettingVisible" value="true"/>
   </appSettings>
  
@@ -59,4 +65,14 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
+    <connectionStrings>
+    <add name="ECommerceEntities"
+      connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=194.169.120.27;initial catalog=ECommerce;persist security info=True;user id=ecommerce;password=FF2020!!;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient"/>
+  </connectionStrings>
 </configuration>
