--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AdminUserManagement\AdminUserRepository.cs" />
     <Compile Include="Repository\AppUserManagement\AppUserRepository.cs" />
     <Compile Include="Repository\SliderManagement\SliderManagement.cs" />
   </ItemGroup>
