Kargo CRUD işlemleri yapıldı. Random dosya isimleri oluşturulması için filehelper oluşturuldu.

--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AdminUserManagement\AdminUserRepository.cs" />
     <Compile Include="Repository\AppUserManagement\AppUserRepository.cs" />
+    <Compile Include="Repository\ShippersManagement\ShippersRepository.cs" />
     <Compile Include="Repository\SliderManagement\SliderManagement.cs" />
   </ItemGroup>
   <ItemGroup />
