--- a/ECommerce/ECommerce.CORE/ECommerce.CORE.csproj
+++ b/ECommerce/ECommerce.CORE/ECommerce.CORE.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\FileHelper.cs" />
     <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
