Slider CRUD işlemleri yapıldı.

--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Repository\AdminUserManagement\AdminUserRepository.cs" />
     <Compile Include="Repository\AppUserManagement\AppUserRepository.cs" />
     <Compile Include="Repository\ShippersManagement\ShippersRepository.cs" />
-    <Compile Include="Repository\SliderManagement\SliderManagement.cs" />
+    <Compile Include="Repository\SliderManagement\SliderRepository.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
