--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -973,11 +973,14 @@
     <Compile Include="Areas\Admin\Controllers\AdminUserManagement\AdminUserController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\ShippersManagement\ShipperController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SliderManagement\SliderController.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserListViewModel.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserLoginCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperListView.cs" />
+    <Compile Include="Areas\Admin\Model\SliderManagement\SliderCRUDModel.cs" />
+    <Compile Include="Areas\Admin\Model\SliderManagement\SliderListView.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1041,6 +1044,9 @@
     <Content Include="Areas\Admin\Views\Shipper\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shipper\Insert.cshtml" />
     <Content Include="Areas\Admin\Views\Shipper\Update.cshtml" />
+    <Content Include="Areas\Admin\Views\Slider\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Slider\Insert.cshtml" />
+    <Content Include="Areas\Admin\Views\Slider\Update.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -1058,6 +1064,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\AppUserManagement\" />
     <Folder Include="Uploads\ShippersLogo\" />
+    <Folder Include="Uploads\SliderImage\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
