Category Insert İşlemi Gerçeklendi Ve Prosedür Güncellendi.

--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -100,6 +100,69 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\select2\i18n\af.js" />
+    <Content Include="Content\css\select2\i18n\ar.js" />
+    <Content Include="Content\css\select2\i18n\az.js" />
+    <Content Include="Content\css\select2\i18n\bg.js" />
+    <Content Include="Content\css\select2\i18n\bs.js" />
+    <Content Include="Content\css\select2\i18n\ca.js" />
+    <Content Include="Content\css\select2\i18n\cs.js" />
+    <Content Include="Content\css\select2\i18n\da.js" />
+    <Content Include="Content\css\select2\i18n\de.js" />
+    <Content Include="Content\css\select2\i18n\dsb.js" />
+    <Content Include="Content\css\select2\i18n\el.js" />
+    <Content Include="Content\css\select2\i18n\en.js" />
+    <Content Include="Content\css\select2\i18n\es.js" />
+    <Content Include="Content\css\select2\i18n\et.js" />
+    <Content Include="Content\css\select2\i18n\eu.js" />
+    <Content Include="Content\css\select2\i18n\fa.js" />
+    <Content Include="Content\css\select2\i18n\fi.js" />
+    <Content Include="Content\css\select2\i18n\fr.js" />
+    <Content Include="Content\css\select2\i18n\gl.js" />
+    <Content Include="Content\css\select2\i18n\he.js" />
+    <Content Include="Content\css\select2\i18n\hi.js" />
+    <Content Include="Content\css\select2\i18n\hr.js" />
+    <Content Include="Content\css\select2\i18n\hsb.js" />
+    <Content Include="Content\css\select2\i18n\hu.js" />
+    <Content Include="Content\css\select2\i18n\hy.js" />
+    <Content Include="Content\css\select2\i18n\id.js" />
+    <Content Include="Content\css\select2\i18n\is.js" />
+    <Content Include="Content\css\select2\i18n\it.js" />
+    <Content Include="Content\css\select2\i18n\ja.js" />
+    <Content Include="Content\css\select2\i18n\km.js" />
+    <Content Include="Content\css\select2\i18n\ko.js" />
+    <Content Include="Content\css\select2\i18n\lt.js" />
+    <Content Include="Content\css\select2\i18n\lv.js" />
+    <Content Include="Content\css\select2\i18n\mk.js" />
+    <Content Include="Content\css\select2\i18n\ms.js" />
+    <Content Include="Content\css\select2\i18n\nb.js" />
+    <Content Include="Content\css\select2\i18n\nl.js" />
+    <Content Include="Content\css\select2\i18n\pl.js" />
+    <Content Include="Content\css\select2\i18n\ps.js" />
+    <Content Include="Content\css\select2\i18n\pt-BR.js" />
+    <Content Include="Content\css\select2\i18n\pt.js" />
+    <Content Include="Content\css\select2\i18n\ro.js" />
+    <Content Include="Content\css\select2\i18n\ru.js" />
+    <Content Include="Content\css\select2\i18n\sk.js" />
+    <Content Include="Content\css\select2\i18n\sl.js" />
+    <Content Include="Content\css\select2\i18n\sr-Cyrl.js" />
+    <Content Include="Content\css\select2\i18n\sr.js" />
+    <Content Include="Content\css\select2\i18n\sv.js" />
+    <Content Include="Content\css\select2\i18n\th.js" />
+    <Content Include="Content\css\select2\i18n\tk.js" />
+    <Content Include="Content\css\select2\i18n\tr.js" />
+    <Content Include="Content\css\select2\i18n\uk.js" />
+    <Content Include="Content\css\select2\i18n\vi.js" />
+    <Content Include="Content\css\select2\i18n\zh-CN.js" />
+    <Content Include="Content\css\select2\i18n\zh-TW.js" />
+    <Content Include="Content\css\select2\select2.css" />
+    <Content Include="Content\css\select2\select2.fix.js" />
+    <Content Include="Content\css\select2\select2.full.js" />
+    <Content Include="Content\css\select2\select2.full.min.js" />
+    <Content Include="Content\css\select2\select2.js" />
+    <Content Include="Content\css\select2\select2.min.css" />
+    <Content Include="Content\css\select2\select2.min.js" />
+    <Content Include="Content\js\select2.js" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -1013,12 +1076,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminUserManagement\AdminUserController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CategoryManagement\CategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\ShippersManagement\ShipperController.cs" />
     <Compile Include="Areas\Admin\Controllers\SliderManagement\SliderController.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserListViewModel.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserLoginCRUDModel.cs" />
+    <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryCRUDModel.cs" />
+    <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryListView.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperListView.cs" />
     <Compile Include="Areas\Admin\Model\SliderManagement\SliderCRUDModel.cs" />
@@ -1089,6 +1155,9 @@
     <Content Include="Areas\Admin\Views\Slider\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Slider\Insert.cshtml" />
     <Content Include="Areas\Admin\Views\Slider\Update.cshtml" />
+    <Content Include="Content\css\select2\results.json" />
+    <Content Include="Areas\Admin\Views\Category\Insert.cshtml" />
+    <Content Include="Areas\Admin\Views\Category\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
