--- a/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
+++ b/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
@@ -120,6 +120,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursiveCategoryList_Result.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Shipper.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
