kategorideki arama sorunu çözüldü tüm dropdownlara o yapı uygulandı.

--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -162,6 +162,15 @@
     <Content Include="Content\css\select2\select2.js" />
     <Content Include="Content\css\select2\select2.min.css" />
     <Content Include="Content\css\select2\select2.min.js" />
+    <Content Include="Content\selectize\css\selectize.bootstrap2.css" />
+    <Content Include="Content\selectize\css\selectize.bootstrap3.css" />
+    <Content Include="Content\selectize\css\selectize.css" />
+    <Content Include="Content\selectize\css\selectize.default.css" />
+    <Content Include="Content\selectize\css\selectize.legacy.css" />
+    <Content Include="Content\selectize\js\selectize.js" />
+    <Content Include="Content\selectize\js\selectize.min.js" />
+    <Content Include="Content\selectize\js\standalone\selectize.js" />
+    <Content Include="Content\selectize\js\standalone\selectize.min.js" />
     <Content Include="Content\js\select2.js" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -236,6 +245,7 @@
     <Content Include="Themes\AdminAssets\images\card\card-img7.jpg" />
     <Content Include="Themes\AdminAssets\images\card\card-img8.jpg" />
     <Content Include="Themes\AdminAssets\images\card\card-img9.jpg" />
+    <Content Include="Themes\AdminAssets\images\icon\favicon.ico" />
     <Content Include="Themes\AdminAssets\images\icon\loader.gif" />
     <Content Include="Themes\AdminAssets\images\icon\logo.png" />
     <Content Include="Themes\AdminAssets\images\icon\logo2.png" />
@@ -1158,6 +1168,15 @@
     <Content Include="Content\css\select2\results.json" />
     <Content Include="Areas\Admin\Views\Category\Insert.cshtml" />
     <Content Include="Areas\Admin\Views\Category\Index.cshtml" />
+    <Content Include="Content\selectize\less\plugins\drag_drop.less" />
+    <Content Include="Content\selectize\less\plugins\dropdown_header.less" />
+    <Content Include="Content\selectize\less\plugins\optgroup_columns.less" />
+    <Content Include="Content\selectize\less\plugins\remove_button.less" />
+    <Content Include="Content\selectize\less\selectize.bootstrap2.less" />
+    <Content Include="Content\selectize\less\selectize.bootstrap3.less" />
+    <Content Include="Content\selectize\less\selectize.default.less" />
+    <Content Include="Content\selectize\less\selectize.legacy.less" />
+    <Content Include="Content\selectize\less\selectize.less" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
