--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1177,6 +1177,7 @@
     <Content Include="Content\selectize\less\selectize.default.less" />
     <Content Include="Content\selectize\less\selectize.legacy.less" />
     <Content Include="Content\selectize\less\selectize.less" />
+    <Content Include="Areas\Admin\Views\Category\Update.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
