--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1088,6 +1088,7 @@
     <Compile Include="Areas\Admin\Controllers\AdminUserManagement\AdminUserController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoryManagement\CategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ParameterManagement\ParameterController.cs" />
     <Compile Include="Areas\Admin\Controllers\ShippersManagement\ShipperController.cs" />
     <Compile Include="Areas\Admin\Controllers\SliderManagement\SliderController.cs" />
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserCRUDModel.cs" />
@@ -1095,6 +1096,7 @@
     <Compile Include="Areas\Admin\Model\AdminUserManagement\AdminUserLoginCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryListView.cs" />
+    <Compile Include="Areas\Admin\Model\ParameterManagement\ParameterCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperListView.cs" />
     <Compile Include="Areas\Admin\Model\SliderManagement\SliderCRUDModel.cs" />
@@ -1178,6 +1180,7 @@
     <Content Include="Content\selectize\less\selectize.legacy.less" />
     <Content Include="Content\selectize\less\selectize.less" />
     <Content Include="Areas\Admin\Views\Category\Update.cshtml" />
+    <Content Include="Areas\Admin\Views\Parameter\InsertProductProperty.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
