--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1097,6 +1097,7 @@
     <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\CategoryManagement\CategoryListView.cs" />
     <Compile Include="Areas\Admin\Model\ParameterManagement\ParameterCRUDModel.cs" />
+    <Compile Include="Areas\Admin\Model\ParameterManagement\ParameterListView.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperListView.cs" />
     <Compile Include="Areas\Admin\Model\SliderManagement\SliderCRUDModel.cs" />
@@ -1181,6 +1182,8 @@
     <Content Include="Content\selectize\less\selectize.less" />
     <Content Include="Areas\Admin\Views\Category\Update.cshtml" />
     <Content Include="Areas\Admin\Views\Parameter\InsertProductProperty.cshtml" />
+    <Content Include="Areas\Admin\Views\Parameter\ProductPropertyList.cshtml" />
+    <Content Include="Areas\Admin\Views\Parameter\UpdateProductProperty.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
