--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1125,7 +1125,9 @@
     <Compile Include="Models\AddressManagament\AddressCRUDModel.cs" />
     <Compile Include="Models\AddressManagament\AddressListView.cs" />
     <Compile Include="Models\AppUserManagement\AppUserCRUDModel.cs" />
+    <Compile Include="Models\AppUserManagement\AppUserUpdateView.cs" />
     <Compile Include="Models\AppUserManagement\LoggedUser.cs" />
+    <Compile Include="Models\CityCountyManagament\CityCountyListView.cs" />
     <Compile Include="Models\SliderManagement\SliderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Attribute\LoggedAdminAttribute.cs" />
@@ -1216,9 +1218,11 @@
     <Content Include="Views\AppUser\UserProfile.cshtml" />
     <Content Include="Views\Address\Index.cshtml" />
     <Content Include="Views\Address\Insert.cshtml" />
-    <Content Include="Views\AppUser\Index.cshtml" />
     <Content Include="Views\AppUser\_ProfileInfo.cshtml" />
     <Content Include="Views\Address\Update.cshtml" />
+    <Content Include="Views\AppUser\Index.cshtml" />
+    <Content Include="Views\AppUser\UpdateUser.cshtml" />
+    <Content Include="Views\AppUser\_MenuInfo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1228,7 +1232,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\CategoryManagement\" />
     <Folder Include="Uploads\ShippersLogo\" />
     <Folder Include="Uploads\SliderImage\" />
     <Folder Include="Views\Base\" />
