AdminUser controllerda session düzenlendi çıkış yap'a tıklayınca cookie silindi.

--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -15,8 +15,8 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="AppUrl" value="http://localhost:44344/"/>
-    <add key="FileUrl" value="http://localhost:44344/"/>
+    <add key="AppUrl" value="https://localhost:44344/"/>
+    <add key="FileUrl" value="https://localhost:44344/"/>
     <add key="MailTemplateRootPath" value="~/Views/Mail/Template/"/>
     <add key="MailTemplateFileExt" value="cshtml"/>
     <add key="MailHost" value="smtp.gmail.com"/>
